--- a/plugins/out_pgsql/CMakeLists.txt
+++ b/plugins/out_pgsql/CMakeLists.txt
@@ -9,15 +9,10 @@ target_link_libraries(flb-plugin-out_pgsql -lpq)
 
 # Include and link libpq on Windows.
 if (FLB_SYSTEM_WINDOWS)
-  # find PG include
-  if(MSVC)
-    # have to specify full path because AppVeyor install several versions of PG and none of them is in the PATH
-    execute_process(COMMAND "c:/Program Files/PostgreSQL/13/bin/pg_config.exe" --includedir OUTPUT_VARIABLE PG_INCLUDE)
-    execute_process(COMMAND "c:/Program Files/PostgreSQL/13/bin/pg_config.exe" --libdir OUTPUT_VARIABLE PG_LIB)
-  else()
-    execute_process(COMMAND pg_config --includedir OUTPUT_VARIABLE PG_INCLUDE)
-    execute_process(COMMAND pg_config --libdir OUTPUT_VARIABLE PG_LIB)
-  endif()
+  # find PG include, have to specify full path because AppVeyor install several versions of PG and none of them is in the PATH
+  execute_process(COMMAND "c:/Program Files/PostgreSQL/13/bin/pg_config.exe" --includedir OUTPUT_VARIABLE PG_INCLUDE)
+  execute_process(COMMAND "c:/Program Files/PostgreSQL/13/bin/pg_config.exe" --libdir OUTPUT_VARIABLE PG_LIB)
+  message(STATUS "PG include is in ${PG_INCLUDE}, PG lib is ${PG_LIB}")
   string(STRIP ${PG_INCLUDE} PG_INCLUDE)
   string(STRIP ${PG_LIB} PG_LIB)
   message(STATUS "PG include is in ${PG_INCLUDE}, PG lib is ${PG_LIB}")
