chore: try target_ prefix

--- a/plugins/out_pgsql/CMakeLists.txt
+++ b/plugins/out_pgsql/CMakeLists.txt
@@ -16,7 +16,7 @@ if (FLB_SYSTEM_WINDOWS)
   string(STRIP ${PG_LIB} PG_LIB)
   message(STATUS "PG include is in ${PG_INCLUDE}, PG lib is ${PG_LIB}")
   # Include directories 
-  include_directories(${PG_INCLUDE})
-  link_directories(${PG_LIB})
-  link_libraries(libpq.lib)
+  target_include_directories(flb-plugin-out_pgsql ${PG_INCLUDE})
+  target_link_directories(flb-plugin-out_pgsql ${PG_LIB})
+  target_link_libraries(flb-plugin-out_pgsql libpq.lib)
 endif()
