--- a/plugins/out_pgsql/CMakeLists.txt
+++ b/plugins/out_pgsql/CMakeLists.txt
@@ -14,8 +14,9 @@ if (FLB_SYSTEM_WINDOWS)
   string(STRIP ${PG_LIB} PG_LIB)
   message(STATUS "PG include is in ${PG_INCLUDE}, PG lib is ${PG_LIB}")
   # Include directories 
-  target_include_directories(flb-plugin-out_pgsql ${PG_INCLUDE})
-  target_link_directories(flb-plugin-out_pgsql ${PG_LIB})
+  target_include_directories(flb-plugin-out_pgsql PRIVATE ${PG_INCLUDE})
+  target_link_directories(flb-plugin-out_pgsql PRIVATE ${PG_LIB})
+  target_link_libraries(flb-plugin-out_pgsql ${PG_LIB}/libpq.lib)
 else()
   target_include_directories(flb-plugin-out_pgsql PRIVATE ${PostgreSQL_INCLUDE_DIRS})
   target_link_libraries(flb-plugin-out_pgsql -lpq)
