--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,6 +3,7 @@ version: v1-winbuild-{build}
 image: Visual Studio 2019
 
 platform:
+  - Win32
   - x64
 
 environment:
@@ -34,9 +35,6 @@ build_script:
   - powershell ".\ci\do-ut.ps1;exit $LASTEXITCODE"
   - cd build
   - cpack
-
-on_finish:
-  - ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
 
 artifacts:
   - path: build/td-agent-bit-*.exe
