--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,7 +9,7 @@ platform:
 environment:
   vspath: 'C:\Program Files (x86)\Microsoft Visual Studio\2019\Community'
   winflexbison: https://github.com/lexxmark/winflexbison/releases/download/v2.5.22/win_flex_bison-2.5.22.zip
-  PATH: '%PATH%;C:\WinFlexBison'
+  PATH: '%PATH%;C:\WinFlexBison;C:\Program Files (x86)\PostgreSQL\9.6;C:\Program Files\PostgreSQL\9.6'
 
 configuration:
   - Release
@@ -25,13 +25,13 @@ install:
       Expand-Archive winflexbison.zip -Destination /WinFlexBison
       Copy-Item -Path /WinFlexBison/win_bison.exe /WinFlexBison/bison.exe
       Copy-Item -Path /WinFlexBison/win_flex.exe /WinFlexBison/flex.exe
-  # - ps: |
-  #     if ($env:PLATFORM -eq "Win32") {
-  #       Invoke-WebRequest -Uri "https://get.enterprisedb.com/postgresql/postgresql-9.6.22-1-windows-binaries.zip" -Outfile /pgsql.zip
-  #       Expand-Archive -Path /pgsql.zip -DestinationPath /
-  #       New-Item -ItemType directory -Path "C:\Program Files (x86)\PostgreSQL"
-  #       Move-Item -Path /pgsql -Destination "C:\Program Files (x86)\PostgreSQL\9.6"
-  #     }
+  - ps: |
+      if ($env:PLATFORM -eq "Win32") {
+        Invoke-WebRequest -Uri "https://get.enterprisedb.com/postgresql/postgresql-9.6.22-1-windows-binaries.zip" -Outfile /pgsql.zip
+        Expand-Archive -Path /pgsql.zip -DestinationPath /
+        New-Item -ItemType directory -Path "C:\Program Files (x86)\PostgreSQL"
+        Move-Item -Path /pgsql -Destination "C:\Program Files (x86)\PostgreSQL\9.6"
+      }
 
 before_build:
   - git clone --depth=1 https://github.com/calyptia/fluent-bit-ci.git ci
