--- a/plugins/out_pgsql/CMakeLists.txt
+++ b/plugins/out_pgsql/CMakeLists.txt
@@ -7,7 +7,8 @@ find_package(PostgreSQL REQUIRED)
 if (PostgreSQL_FOUND)
     FLB_PLUGIN(out_pgsql "${src}" "")
     target_include_directories(flb-plugin-out_pgsql PRIVATE ${PostgreSQL_INCLUDE_DIRS})
-    if (FLB_SYSTEM_WINDOWS)    
+    if (FLB_SYSTEM_WINDOWS)
+        target_link_directories(flb-plugin-out_pgsql PRIVATE ${PG_LIB})
         target_link_libraries(flb-plugin-out_pgsql ${PostgreSQL_LIBRARY_DIRS}/libpq.lib)
     else ()
         target_link_libraries(flb-plugin-out_pgsql -lpq)
